package business.dataStruct.enums;

/**
 * 
 * @author DESCHAMPS Aymeric
 */
public enum Genre{
    Jazz,
    Classic,
    HipHop,
    Rock,
    Pop,
    Rap
}