package business.dataStruct.enums;

/**
 * 
 * @author DESCHAMPS Aymeric
 */
public enum Category{
    Youth,
    Novel,
    Theater,
    Speech,
    Documentary
}
