package business.dataStruct.enums;

/**
 * 
 * @author DESCHAMPS Aymeric
 */
public enum Language{
    French,
    English,
    Italian,
    Spanish,
    German
}
